# alldaydj

./: .deepsource.toml  .gitignore  AllDayDJ.sln  README.md  ReadMe.md  manage.py  requirements.txt
.github/: dependabot.yml
.github/workflows/: alldaydj-actions.yml  containers.yml  linting.yml  test.yml
AllDayDJ/: AllDayDJ.csproj  AllDayDJ.sln  App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  MauiProgram.cs
AllDayDJ/Constants/: ApiConstants.cs
AllDayDJ/Pages/: LoginPage.xaml  (+2 more)
AllDayDJBackend/: AllDayDJBackend.csproj  AllDayDJBackend.http  AllDayDJBackend.sln  Program.cs  appsettings.json
Backend/: Dockerfile  README.md  main.py  pyproject.toml
Backend/alldaydj/: asgi.py  settings.py  urls.py  wsgi.py
Backend/alldaydj/migrations/: 0001_initial.py  0002_cart_cue_intro_cart_cue_outro_cart_cue_start.py
Backend/alldaydj/models/: __init__.py  audio.py
Backend/alldaydj/serialisers/: audio.py
Backend/alldaydj/tests/models/: test_audio.py
Backend/alldaydj/views/: audio.py  settings.py
Backend/errors/: exceptions.py
Backend/models/: genre.py  mongo.py  mongodb.py  settings.py  tag.py  type.py
Backend/routers/: genre.py  settings.py  tag.py  type.py
Backend/services/: database.py  security.py  settings.py
Frontend/: README.md  main.py  pyproject.toml
Frontend/models/core/: settings.py
Frontend/models/dto/: api.py  audio.py  authentication.py  base.py
Frontend/scripts/: convert_views.py
Frontend/services/: api.py  audio.py  authentication.py  factory.py  file.py  genre.py  json.py  logging.py  settings.py  tag.py  type.py
Frontend/tests/services/: access_token.json  logging.py  qt.py  test_api.py  test_authentication.py
Frontend/ui/viewmodels/: genre.py  tag.py  type.py
Frontend/ui/views/: cart_editor.py  clock.py  launcher.py  library.py  login.py  main.py  placeholder.py
Frontend/ui/views/settings/: __init__.py  genres.py  settings.py  sound.py  tag.py  types.py
alldaydj/: __init__.py  admin.py  apps.py  asgi.py  audio.py  celery.py  codecs.py  models.py  serializers.py  settings.py  settings_local_example.py  tasks.py  urls.py  views.py  wsgi.py
backend/: .firebaserc  ReadMe.md  audio_processing.py  e2efixture.json  firebase.json  job.dockerfile  launch.sh  main.py  manage.py  requirements.txt  web.Dockerfile
environments/: ReadMe.md
frontend/: .eslintrc.json  .gitignore  frontend.Dockerfile  loadbalancer.Dockerfile  loadbalancer.conf  nginx.conf  package.json
kubernetes/: ReadMe.md  backend-deployment.yaml  frontend-deployment.yaml  ingress-deployment.yaml  kustomization.example.yaml  postgres-deployment.yaml  rabbitmq-deployment.yaml
sync/: ReadMe.md  logging.ini  requirements.txt  sync.py
(+311 files in other folders)
