[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Marc Steele <steelegbr@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
django-environ = "^0.11.2"
djangorestframework = "^3.15.2"
markdown = "^3.7"
django-filter = "^24.3"
djangorestframework-simplejwt = {extras = ["crypto"], version = "^5.3.1"}
psycopg2 = "^2.9.10"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
