[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Marc Steele <steelegbr@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.6"}
pydantic-settings = "^2.7.1"
pyjwt = {extras = ["crypto"], version = "^2.10.1"}
motor = "^3.6.0"
fastapi-pagination = "^0.12.34"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
