[tool.poetry]
name = "frontend"
version = "0.1.0"
description = ""
authors = ["Marc Steele <steelegbr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
structlog = "^24.4.0"
pydantic = "^2.10.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
